fixed layout bug

--- a/src/components/ExpenseChart/expenseChart.module.css
+++ b/src/components/ExpenseChart/expenseChart.module.css
@@ -10,7 +10,7 @@
 }
 
 .mui-card-content {
-  padding: 24px 8px 8px !important;
+  padding: 16px 8px 8px !important;
   font-weight: 400;
   font-size: 11px;
 }
